Change default server port

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8081
+
 spring.datasource.url=jdbc:postgresql://demosms-db-instance.c3v5zsaitsyl.us-east-1.rds.amazonaws.com:5432/demosmsdb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
