Implement Caching with redis, and implement outbound sms logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,11 @@ server.port=8081
 spring.datasource.url=jdbc:postgresql://demosms-db-instance.c3v5zsaitsyl.us-east-1.rds.amazonaws.com:5432/demosmsdb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+redis.hostName=redis-16672.c10.us-east-1-2.ec2.cloud.redislabs.com
+redis.port=16672
+redis.password=d0DHY7o6EB0zWBFOvTWETFnSI7xwjOJp
+
+request.count.cacheName=REQUEST-COUNT
+request.dailyTracker.cacheName=REQUEST-DAILY-COUNTER
+stop.requests.cacheName=STOP-REQUESTS
